NIAD-910: Change effectiveTime to be mapped to empty in case dates are not provided